Fixing spacing of code display + run button to generate report

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,20 @@
 
 
 .App {
-  
+  height: calc(100vh - 56px);
 }
 
 .content {
-  margin: 20px 0;
+  height: 100%;
 }
 
 .preview {
   max-width: 800px;
+}
+
+#run-button {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  margin: 2rem;
 }
